--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 authors = ["Jason White <jwhite@esri.com>"]
 
 [dependencies]
+serde = { version = "1", optional = true }
+serde_test = { version = "1", optional = true }
 
 [dev-dependencies]
 quickcheck = "0.6"
 rand = "0.5"
+
+[features]
+serde_impl = ["serde", "serde_test"]
